# Epitech

./: .gitignore  README.md
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  bomberman  bomberman.cbp  cmake_install.cmake
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/include/: Include.hpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/raylib-cpp/: CMakeLists.txt  Findraylib.cmake  Makefile  cmake_install.cmake  raylib-cpp.cbp  raylib-cpp.hpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/raylib-cpp/src/audioDevice/: AudioDevice.cpp  AudioDevice.hpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/raylib-cpp/src/boundingBox/: BoundingBox.cpp  BoundingBox.hpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/src/: main.cpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/src/core/: Core.cpp  Core.hpp
Tek2/B4 - Year-End-Project - Indie Studio/Indie Studio/src/scene/: IScene.cpp  IScene.hpp
Tek2/B4 - x86-64 Assembly/: Makefile
Tek3/B5 - Advanced C++ -  R-Type/R-Type/: CMakeLists.txt  Dockerfile  build_linux.sh  build_macos.sh  conanfile.txt  server.sh
Tek3/B5 - Advanced C++ -  R-Type/R-Type/Documentation/: rfc6996.txt
Tek3/B5 - Advanced C++ -  R-Type/R-Type/client/: Client.cpp  Client.hpp  main.cpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/client/ECS/: SfmlDrawable.cpp  SfmlDrawable.hpp  SfmlMusic.cpp  SfmlMusic.hpp  SfmlSound.cpp  SfmlSound.hpp  SfmlText.cpp  SfmlText.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/client/GameObjects/: GameParallax.cpp  GameParallax.hpp  Music.cpp  Music.hpp  Picture.cpp  Picture.hpp  SoundClicked.cpp  SoundClicked.hpp  Text.cpp  Text.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/client/Network/: ITcp.hpp  IUdp.hpp  SfmlTcpClient.cpp  SfmlTcpClient.hpp  SfmlUdpClient.cpp  SfmlUdpClient.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/client/Scene/: AScene.cpp  AScene.hpp  CreateRoomScene.cpp  CreateRoomScene.hpp  GameScene.cpp  GameScene.hpp  IScene.hpp  JoinRoomScene.cpp  JoinRoomScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  NewGameScene.cpp  NewGameScene.hpp  SettingsScene.cpp  SettingsScene.hpp  TutorialScene.cpp  TutorialScene.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/: IServer.hpp  Server.cpp  Server.hpp  main.cpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/GameObjects/: AAmmo.cpp  AAmmo.hpp  ABonus.cpp  ABonus.hpp  AEnemy.cpp  AEnemy.hpp  AMalus.cpp  AMalus.hpp  Ammo1.cpp  Ammo1.hpp  Ammo2.cpp  Ammo2.hpp  Bonus1.cpp  Bonus1.hpp  Bonus2.cpp  Bonus2.hpp  Bonus3.cpp  Bonus3.hpp  Enemy1.cpp  Enemy1.hpp  Enemy2.cpp  Enemy2.hpp  Enemy3.cpp  Enemy3.hpp  Enemy4.cpp  Enemy4.hpp  Malus1.cpp  Malus1.hpp  Malus2.cpp  Malus2.hpp  Malus3.cpp  Malus3.hpp  Player.cpp  Player.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/Scene/: AGameManager.cpp  AGameManager.hpp  Game.cpp  Game.hpp  IGameManager.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/network/: Asio.hpp  network.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/room/: IRoom.hpp  Room.cpp  Room.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/swarm/: Swarm.cpp  Swarm.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/server/user/: IUser.hpp  User.cpp  User.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/: SharedLIb.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/Clock/: clock.cpp  clock.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/ECS/: ADrawables.cpp  ADrawables.hpp  AMusic.cpp  AMusic.hpp  ASound.cpp  ASound.hpp  AText.cpp  AText.hpp  Acceleration.cpp  Acceleration.hpp  Dammage.cpp  Dammage.hpp  Effect.cpp  Effect.hpp  EffectHandler.cpp  EffectHandler.hpp  GameObject.hpp  Health.cpp  Health.hpp  HitBox.cpp  HitBox.hpp  IComponent.hpp  IEffect.hpp  IGameObject.hpp  IManager.hpp  IWeapon.hpp  Id.cpp  Id.hpp  Position.cpp  Position.hpp  Score.cpp  Score.hpp  Stat.cpp  Stat.hpp  State.cpp  State.hpp  WeaponHolder.cpp  WeaponHolder.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/Event/: AEvent.cpp  AEvent.hpp  SfmlEvent.cpp  SfmlEvent.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/Network/: Requests.cpp  Requests.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/include/: LibrairyTypes.hpp  include.hpp
Tek3/B5 - Advanced C++ -  R-Type/R-Type/shared/utils/: print.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/: Babel.cbp  CMakeLists.txt  Dockerfile  babel_schema.sql  build_linux.sh  build_macos.sh  conanfile.txt  protocol.txt  server.sh
Tek3/B5 - Advanced C++ - Babel/Babel/client/: Client.cpp  Client.hpp  Exception.hpp  main.cpp
Tek3/B5 - Advanced C++ - Babel/Babel/client/Audio/: Opus.cpp  Opus.hpp  PortAudio.cpp  PortAudio.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/client/Encrypt/: Encrypt.cpp  Encrypt.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/client/Network/: ITcp.hpp  IUdp.hpp  LoopUdp.cpp  LoopUdp.hpp  Tcp.cpp  Tcp.hpp  Udp.cpp  Udp.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/client/Thread/: Thread.cpp  Thread.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/client/UI/: IMainWindow.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Tek3/B5 - Advanced C++ - Babel/Babel/client/Utils/: Utils.cpp  Utils.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/server/: main.cpp
Tek3/B5 - Advanced C++ - Babel/Babel/server/server/: Server.cpp  Server.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/server/user/: IUser.hpp  User.cpp  User.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/shared_files/: Utils.cpp
Tek3/B5 - Advanced C++ - Babel/Babel/shared_files/commandManager/: CommandManager.cpp  CommandManager.hpp
Tek3/B5 - Advanced C++ - Babel/Babel/shared_include/: include.hpp
(+1687 files in other folders)
